[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Pause/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/Volume/VolumeSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Fonts/Mythoz16.tres" type="Theme" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="VolumeSliderControl" parent="." instance=ExtResource( 2 )]
margin_left = 50.0
margin_top = 50.0
margin_right = -794.0
margin_bottom = -534.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
margin_left = 458.0
margin_top = 242.0
margin_right = 566.0
margin_bottom = 357.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer2"]
margin_right = 108.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer2"]
margin_top = 4.0
margin_right = 108.0
margin_bottom = 37.0
size_flags_horizontal = 5
size_flags_vertical = 5
text = "Resume"

[node name="Respawn" type="Button" parent="CenterContainer/VBoxContainer2"]
margin_top = 41.0
margin_right = 108.0
margin_bottom = 74.0
size_flags_horizontal = 5
size_flags_vertical = 5
text = "Respawn"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer2"]
margin_top = 78.0
margin_right = 108.0
margin_bottom = 111.0
size_flags_horizontal = 5
size_flags_vertical = 0
text = "Exit"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer2"]
margin_top = 115.0
margin_right = 108.0
margin_bottom = 115.0
mouse_filter = 2
size_flags_vertical = 3

[connection signal="pressed" from="CenterContainer/VBoxContainer2/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/Respawn" to="." method="_on_Respawn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/Exit" to="." method="_on_Exit_pressed"]
